# stm32f0_minimal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  defs.h  main.c  main.cpp
cmake/: toolchain.cmake
debug_scripts/: .gdbinit
